# CameraTrapAssistant

./: .cache.sqlite  .gitignore  CameraTrapAssistant_windows.bat  CameraTrapAssistant_windows_launcher.bat  README.md  deepfaune_gui.ini  pyproject.toml  requirements.txt
CameraTrapAssistant/: version.json
CameraTrapAssistant/src/core/prediction/: predict.py
CameraTrapAssistant/src/core/stats/: __init__.py  csv_generator.py  pdf_generator.py
CameraTrapAssistant/src/gui/utils/: __init__.py  config.py  donation.py  map.py  tooltip.py
CameraTrapAssistant/src/models/: LICENSE.txt  classifTools.py  detectTools.py  predictTools.py
CameraTrapAssistant/src/models/weights/: deepfaune-vit_large_patch14_dinov2.lvd142m.v3.pt  deepfaune-yolov8s_960.pt  md_v1000.0.0-sorrel-960-2025.06.06.pt
CameraTrapAssistant/src/utils/: exiftool_interface.py
CameraTrapAssistant/src/utils/meteo_api/: getMeteoData.py
CameraTrapAssistant/src/utils/time_utils/: timeOffsetToTimezone.py
GUI_utils/: gui_config.py  gui_donation.py  gui_map.py  gui_tooltip.py
actions/: exifGPS.py  generateResultsCSV.py  generateStatsPDF.py  moveEmptyFiles.py  predict.py  renameFiles.py  run.py
actions/stats_utils/data_extractions/: extract_dates_info.py  extract_percent_info.py  prediction_results_filter.py
actions/stats_utils/graphics_data_generation/: generate_animals_table_data.py  generate_observations_by_time_graph.py
commands/: .cache.sqlite  deepFauneGUI.py  deepFauneScript.py  deepfaune_gui.ini
deepFauneApp/: PySimpleGUI.py  README.md  b64_images.py  classifTools.py  deepfauneGUI.py  detectTools.py  fileManager.py  predictTools.py  settings.ini
deepFauneApp/misc/: cfg_setup_deepfaune.iss  cfg_setup_deepfaune_gaspard.iss
deepFauneApp/theme/: sun-valley.tcl
meteoAPI/: __init__.py  getMeteoData.py
objects/: options_config.py
requirements/: base.txt  build.txt  gui.txt
scripts/: README.md  build_exe.py  installer.bat  launcher.bat  updater.bat
src/: __init__.py  main.py
src/core/: __init__.py  run.py
src/core/file_operations/: __init__.py  exif_gps.py
src/core/prediction/: __init__.py
src/core/stats/utils/data_extractions/: prediction_results_filter.py
src/gui/: __init__.py  legacy_gui.py  main_window.py
src/gui/utils/: gui_logging.py
src/models/: __init__.py
src/utils/: resource_manager.py
src/utils/time_utils/: cluster_datetimes.py
time_utils/: dateParser.py  timeOffsetToTimezone.py
toolsInterfaces/: exiftoolInterface.py
utils/: retrieveCSVData.py
(+2 files in other folders)
